package model;

public enum LoanStatus {
    ACTIVE,  // Boek is uitgeleend
    RETURNED, // Boek is teruggebracht
    OVERDUE;  // Boek is te laat, niet teruggebracht
}

