@startuml

Main.LibrarySystemMain -> service.BookService
Main.LibrarySystemMain --> service.MemberService
Main.LibrarySystemMain --> service.LoanService

Controller -> service.BookService
Controller --> service.MemberService
Controller --> service.LoanService

service.BookService --> repository.BookRepository
service.MemberService --> repository.MemberRepository
service.LoanService --> repository.LoanRepository

repository.BookRepository --> model.Book
repository.MemberRepository --> model.Member
repository.LoanRepository --> model.Loan


class Main.LibrarySystemMainBramTests {
+ {static} void main(String[])
}

class model.Loan {
- Date loanDate
- Date dueDate
- Date returnDate
- LoanStatus status
- Book book
- Member member
+ <<Create>> Loan(Date,Date,Book,Member)
+ Date getLoanDate()
+ void setLoanDate(Date)
+ Date getDueDate()
+ void setDueDate(Date)
+ Date getReturnDate()
+ LoanStatus getStatus()
+ void setStatus(LoanStatus)
+ Book getBook()
+ Member getMember()
+ void setReturnDate(Date)
+ boolean isOverdue()
+ boolean equals(Object)
+ int hashCode()
+ String toString()
}


class service.BookService {
- BookRepository bookRepository
- LoanService loanService
+ <<Create>> BookService(BookRepository)
+ void setLoanService(LoanService)
+ List<Book> getBooks()
+ void addBook(Book)
+ void deleteBook(Book)
+ void deleteBook(Long)
+ Book searchBook(String,String,int)
+ Book searchBook(String)
+ Book searchBook(Long)
+ int countAllCopies(String,String,int)
+ int countAllCopies(String)
+ int countAvailableCopies(String)
}


class repository.MemberRepository {
- List<Member> members
+ void save(Member)
+ void deleteById(Long)
+ Optional<Member> findById(Long)
+ List<Member> findAll()
}


enum model.LoanStatus {
+  ACTIVE
+  RETURNED
+  OVERDUE
}

class Main.LibrarySystemMain {
+ {static} void main(String[])
}

class service.LoanService {
- LoanRepository loanRepository
+ <<Create>> LoanService(LoanRepository)
+ Loan createLoan(Book,Member,int)
+ List<Loan> findAll()
+ int countNonreturnedCopies(String)
+ void returnBook(Loan)
+ double checkFine(Loan)
}


class model.Book {
- String title
- String author
- int publicationYear
- String isbn
- boolean isArchived
- Long id
~ {static} AtomicLong atomicLongBook
+ <<Create>> Book(String)
+ <<Create>> Book(String,String,int,String)
+ String getTitle()
+ void setTitle(String)
+ String getAuthor()
+ void setAuthor(String)
+ int getPublicationYear()
+ void setPublicationYear(int)
+ String getIsbn()
+ void setIsbn(String)
+ boolean isArchived()
+ void setArchived(boolean)
+ Long getId()
+ String toString()
}


class repository.LoanRepository {
- List<Loan> loans
+ void addLoan(Loan)
+ List<Loan> getAllLoans()
+ List<Loan> getLoansByMemberId(String)
~ boolean isReturned(Loan)
+ boolean isOverdue(Loan)
+ double calculateFine(Loan)
}


class model.Member {
- String name
- int age
- String memberId
- String email
+ <<Create>> Member(String,int,String,String)
+ String getName()
+ void setName(String)
+ int getAge()
+ void setAge(int)
+ String getMemberId()
+ void setMemberId(String)
+ String getEmail()
+ void setEmail(String)
+ boolean equals(Object)
+ int hashCode()
+ String toString()
}


class service.MemberService {
- MemberRepository memberRepository
+ <<Create>> MemberService(MemberRepository)
+ void addMember(Member)
+ void removeMember(Long)
+ List<Member> listMembers()
}


class repository.BookRepository {
~ List<Book> books
+ <<Create>> BookRepository()
+ void addBook(Book)
+ List<Book> getBooks()
+ List<Book> findAll()
+ Optional<Book> searchBook(String,String,int)
+ Optional<Book> searchBook(String)
+ Optional<Book> searchBook(Long)
+ int countAllCopies(String)
+ int countAllCopies(String,String,int)
}


@enduml